# shortener

./: Cargo.toml  README.md  cliff.toml  deny.toml  http.rest  shell.nix
src/: config.rs  db.rs  entities.rs  error.rs  lib.rs  main.rs  repository.rs  service.rs
src/api/: mod.rs  model.rs  routes.rs
